// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeView display main page based on config 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        style="height: 1010px; width: 3900px;"
      >
        ReactFlow
      </div>
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        style="height: 710px; width: 3900px;"
      >
        ReactFlow
      </div>
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 3`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        style="height: 710px; width: 3900px;"
      >
        ReactFlow
      </div>
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 4`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        style="height: 710px; width: 3900px;"
      >
        ReactFlow
      </div>
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 5`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        style="height: 710px; width: 3900px;"
      >
        ReactFlow
      </div>
    </div>
  </div>
</div>
`;
